--- a/x509/presentation.tex
+++ b/x509/presentation.tex
@@ -26,7 +26,6 @@
 % Presentation metadata.
 \title[X.509 Introduction]{A Brief Introduction to SSL/TLS X.509 Certificates}
 \author{Wade Cline}
-\date{April 8th, 2017}
 
 \AtBeginSection[]
 {
@@ -370,7 +369,7 @@
 		\frametitle{Subcommands}
 		\begin{itemize}
 			\item \texttt{s\_client} -- Connect to SSL/TLS service.
-			\item \texttt{x\_509} -- Mostly reading certificates.
+			\item \texttt{x509} -- Mostly reading certificates.
 			\item \texttt{genrsa} -- Generate private RSA key.
 			\item \texttt{req} -- Generate Certificate Signing Requests (CSRs).
 			\item \textcolor{gray}{\texttt{ca} -- Sign CSRs.}
